# hayekian-systems

./: CLAUDE.md  Cargo.toml  README.md  index.html
.github/workflows/: pages.yml
src/: main.rs  style.css
src/components/: agent_canvas.rs  ales_loop.rs  controls.rs  dashboard.rs  mod.rs  theory_panel.rs
src/core/: abm.rs  agent.rs  mod.rs  params.rs  rng.rs  system.rs
src/domains/: government.rs  market.rs  mod.rs  science.rs
src/ui/: controls.rs  dashboard.rs  loop_view.rs  mod.rs
