[package]
name = "hayekian-systems"
version = "0.1.0"
edition = "2021"
description = "Hayekian Anticipatory Systems Explorer — interactive visualization of ALES loops"

[dependencies]
eframe = "0.31"
egui = "0.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
