[package]
name = "hayekian-systems"
version = "0.2.0"
edition = "2021"
description = "Hayekian Anticipatory Systems Explorer — interactive visualization of ALES loops"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "DomTokenList"] }
wasm-bindgen = "0.2"
